testsuite/lab2-testsuite/bad/redecl_var_after_block_3.cc
int main() {
	let int x;
	{
		let int y;
	}
	let int x;
	return 0;
}
